# clueso.xyz

./: .gitignore  README.md
backend/: next_actions.md  outreach.md  pyproject.toml  reach_out.md  research_report.md
backend/db/: chroma.sqlite3
backend/src/: assistant_crew.py  assistants.py  crew.py  main.py  perplexity.py
backend/src/config/: agents.yaml  assistant-agents.yaml  assistant-tasks.yaml  tasks.yaml
backend/src/tools/github_search_tool/: github_search_tool.py
backend/src/tools/github_trending_tool/: github_trending_tool.py
backend/src/tools/perplexity_tool/: perplexity_tool.py
backend/src/tools/supabase_tool/: supabase_tool.py
frontend/: bun.lockb  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/home/: page.tsx
